# tablet-tilt-joystick

./: MANIFEST.in  README.md  requirements.txt  setup.cfg
src/tablet_tilt_joystick/: __main__.py  show_qr_link.py
src/tablet_tilt_joystick/client/: style.css
tablet_tilt_joystick/: __main__.py  joystick_control.py  server.py
tablet_tilt_joystick/client/: index.html  script.js  style.css
