[metadata]
name = tablet-tilt-joystick
version = 1.0.0
author = ThatCoolCoder
description = Emulate a joystick by tilting your tablet.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/That-Cool-Coder/tablet-tilt-joystick
project_urls =
    Bug Tracker = https://github.com/That-Cool-Coder/tablet-tilt-joystick/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src