[metadata]
name = tablet_tilt_joystick
version = 1.0.2
author = ThatCoolCoder
description = Emulate a joystick by tilting your tablet.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ThatCoolCoder/tablet-tilt-joystick
project_urls =
    Bug Tracker = https://github.com/ThatCoolCoder/tablet-tilt-joystick/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
package_dir =
    = tablet_tilt_joystick
packages = find:
python_requires = >=3.7
install_requires =
    eventlet
    python-socketio

[options.packages.find]
where = tablet_tilt_joystick

[options.entry_points]
console_scripts =
    tablet_tilt_joystick = tablet_tilt_joystick:__main__